--- a/profile.html
+++ b/profile.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Profile - SAKET</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="profile-container">
-    <img src="profile.jpg" alt="Profile Image" class="profile-img">
-    <h3>SAKET</h3>
-    <p><strong>Roll No:</strong> 124AI0038</p>
-    <p><strong>Branch:</strong> Artificial Intelligence</p>
-    <a href="index.html">← Back to Home</a>
+  <div class="top-bar">
+    <div class="logo">NITRIS</div>
+    <div class="user-info" onclick="window.location.href='index.html'">
+      <span>Dashboard</span>
+      <img src="profile.jpg" alt="Profile" />
+    </div>
+  </div>
+
+  <div class="main-container">
+    <div class="profile-card">
+      <img src="profile.jpg" alt="Profile" />
+      <h2>SAKET</h2>
+      <p><strong>Roll No:</strong> 124AI0038</p>
+      <p><strong>Branch:</strong> Artificial Intelligence</p>
+    </div>
   </div>
 </body>
 </html>
